# CNNs-distracted-driving

./: .gitignore  README.md  checkpoint_test.pt  pyproject.toml  quick_local_check.py
.cursor/plans/: fix_hybrid_csv_generation_0e2d218d.plan.md
notebooks/: 00_day1_setup.ipynb  00_setup.ipynb  01_data_preparation.ipynb  02_training.ipynb  03_evaluation.ipynb  04_modality_analysis.ipynb  05_gradcam.ipynb  colab_setup.ipynb  colab_setup_old.ipynb  eda.ipynb  exploration.ipynb
src/data/: manifest.py
src/ddriver/: __init__.py  config.py  test_loop.py  test_losses.py  test_predict.py  test_registry.py  test_trainer.py
src/ddriver/cli/: predict.py  train.py
src/ddriver/data/: augment.py  datamod.py  dataset.py  fastcopy.py  hybrid_extract.py  id_sets.py  manifest.py  mediapipe_audit.py  mediapipe_extract.py  yolo_extract.py
src/ddriver/eval/: metrics.py
src/ddriver/infer/: predict.py
src/ddriver/models/: effb0.py  losses.py  registry.py
src/ddriver/train/: loop.py  trainer.py
src/ddriver/utils/: runs.py  seed.py
src/eval/: metrics.py
test_runs/predict_test/2025-11-24_11-33-09/: epoch_1.pt  history.json  preds.csv  summary.json
test_runs/unit_test/2025-11-24_11-32-44/: epoch_1.pt  history.json  summary.json
