[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddriver"
version = "0.1.0"
description = "CNNs for distracted driving (TFM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "opencv-python-headless>=4.9",
  "albumentations>=1.4",
  "pillow>=10.0",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "python-dotenv>=1.0.0",   # for .env support in config.py
  "ultralytics>=8.1.0",     # for YOLO-World ROI extraction
  "insightface>=0.7.3",     # for hybrid ROI extraction (RetinaFace via ONNX)
  "onnxruntime>=1.16.0",    # ONNX inference backend for insightface
  "grad-cam>=1.4.8",        # for Grad-CAM visualizations
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ddriver*"]
